# simple-microservice-ecommerce-rust-sqlx

./: .gitignore  Cargo.toml  Dockerfile.apigateway  Dockerfile.auth  Dockerfile.email  Dockerfile.order  Dockerfile.product  Dockerfile.role  Makefile  README.md  build_image_docker.sh  create_topic.sh  docker-compose.debug.yaml  docker-compose.yaml  rust-toolchain.toml  rustfmt.toml
crates/apigateway/: .env  .env.example  Cargo.toml
crates/apigateway/src/: config.rs  di.rs  lib.rs  main.rs  state.rs
crates/apigateway/src/abstract_trait/: auth.rs  mod.rs  order.rs  order_item.rs  product.rs  rate_limit.rs  role.rs  session.rs  user.rs
crates/apigateway/src/cache/: rate_limit.rs  session.rs
crates/apigateway/src/handler/: auth.rs  mod.rs  order.rs  order_item.rs  product.rs  role.rs  user.rs
crates/apigateway/src/middleware/: jwt.rs  mod.rs  rate_limit.rs  session.rs  validate.rs
crates/apigateway/src/service/: auth.rs  mod.rs  order.rs  order_item.rs  product.rs  role.rs  user.rs
crates/auth/: .env  Cargo.toml
crates/auth/.sqlx/: query-08f6233da399dbe2e90cb012d1d2afd2e89da29735398bb070e642b82069ec92.json  query-56b7332187d8e0c195119b44daf42e79462df6bfb97daf9c9a296c30e7cdbc63.json  query-71f3dd900a57ef0e8e5a4285b5da4cbc42d14dbd22fc471bfa249178fef4bcbd.json  query-9ab18d692c1f23aa77ff3e504d1a9b637172d2202e6773ba4e0f714ce434f32f.json  query-aecb68599182087e6f931e7ae24cc4a35363097fd7c507c87f6eddb4d310c07e.json  query-e81bb905758b1f59fad7fb92ad380c4a21da5a232b9c52451b1c3872be27881f.json  query-ec06d65eec1ecadaaad151c3c3b6c3f29e5c810c1102ce400aa587619538d0c7.json  query-edaef790d695b382f2ab7edb30344d5b0815529ed9965b2c622848f9d129c56b.json
crates/auth/migrations/: 20250816023530_create_reset_token.down.sql  20250816023530_create_reset_token.up.sql  20250816023532_create_refresh_token.down.sql  20250816023532_create_refresh_token.up.sql
crates/auth/src/: di.rs  lib.rs  main.rs  state.rs
crates/auth/src/abstract_trait/: mod.rs
crates/auth/src/config/: grpc_config.rs  myconfig.rs  server_config.rs
crates/auth/src/grpc_client/: mod.rs  role.rs  user.rs  user_role.rs
crates/auth/src/handler/: auth.rs
crates/auth/src/models/: refresh_token.rs  reset_token.rs
crates/auth/src/repository/: mod.rs
crates/auth/src/service/: forgot.rs  identity.rs  login.rs  mod.rs  register.rs  token.rs
crates/email/: .env  Cargo.toml
crates/email/src/: abstract_trait.rs  app.rs  config.rs  domain.rs  handler.rs  lib.rs  main.rs
crates/email/src/service/: email.rs  kafka.rs  mod.rs
crates/product/: .env  Cargo.toml
crates/product/.sqlx/: query-15ffbd1b3dc7aaf661187f66f1f0efd8faa8d36b36742d5f20e4e18e950c8d1a.json  query-1abd35bd0dee4b786e09e902a8e1eddb2e6ff53af30f7eecaa275dc2a04a0767.json  query-64137559f3d92360914395f5f4b92b382d5bbf8bcc237bb3e54fd78c6ee7b3c7.json  query-8cf243f3dfb20ea476512bfdc3961283b8e219580201a3074ee6dec26f26b32f.json  query-a43757869bdc4f24ecfee862a14c64f388c0e0d48f15ac3da0a08d56247e29be.json  query-a7d5c65c699a73461ea9e43e446e183681c52acefb82c868f13a90ef210b3c06.json  query-b2135454509b33bde92ac94d659762f0c9861253c45fd2d389a8644566cf96d1.json  query-ba29e5831296811b35fb689e509ceda152cc863c50d471dfcc7abf4e90cff903.json  query-c6f81b318d98d92de023d0cd52400a25888db05759ba66d0452ff83f4b03b63c.json  query-e7d8a65053417a785f06dcf524a85f96e9502b876ff498138bbcefc1e009368a.json  query-ee63bae890f0c2419011fa7c1a5e261b64a08483806565f623512f4ce078e025.json  query-f333c3579fb54902f3ea98713ab802eafa8d489d3b7f9690d6383d1306522e7b.json  query-fb83518c103abedfa0057cdc3d5216a9bece948957bc9ac1eac30497b443eba5.json
crates/product/migrations/: 20250816024330_create_products.up.sql
crates/product/src/: di.rs  lib.rs  main.rs  state.rs
crates/product/src/config/: mod.rs  myconfig.rs  server_config.rs
crates/product/src/domain/: event.rs  mod.rs
crates/product/src/handler/: command.rs  query.rs
crates/product/src/kafka/: event.rs  kafka_consumer.rs  mod.rs
crates/product/src/model/: product.rs
crates/product/src/repository/: command.rs  query.rs
crates/product/src/service/: command.rs  query.rs
crates/shared/: Cargo.toml
crates/shared/src/: di.rs  lib.rs  state.rs
crates/shared/src/abstract_trait/: mod.rs
crates/shared/src/cache/: cache_store.rs  mod.rs  rate_limiter.rs  session.rs
crates/shared/src/config/: database.rs  hashing.rs  jwt.rs  kafka.rs  mod.rs  myconfig.rs  redis.rs
crates/shared/src/domain/: event.rs  mod.rs
crates/shared/src/errors/: error.rs  grpc.rs  http.rs  mod.rs  repository.rs  service.rs
crates/shared/src/events/: mod.rs
crates/shared/src/model/: mod.rs  order.rs  refresh_token.rs  reset_token.rs  role.rs
crates/shared/src/repository/: mod.rs  user_role.rs
crates/shared/templates/: email.html
crates/user/: .env  Cargo.toml
crates/user/.sqlx/: query-06649afc785a8fcf895eb529fe8e3764a5d9ffa28f704e630ea52b7650843801.json  query-34fdb05f1f17b0ac5b946ffdaad2e1c61a66f4cfc65b8609921c2c0f97e45c20.json  query-3ddbfb9faeede6cbb03fa5845de62c7bf3d86e2696f2846647a6afa0ac7126e3.json  query-4005e2c8568d31dba055d494db641cd439ca1f8ddeef3ebc22741d7c02ae0741.json  query-467b67576858f547c5c3246f7845988aa444610381d72cd8d32771a164457e74.json  query-4cbb15c389b13c780030567ede28b300d8b49681e7391dbe6fed55d3a97796d8.json  query-51f6e12a9fb006c92702344dcdc00fd09f09f27a0f6dd3f7894d2a1e8821e648.json  query-6db89850a2659ecfb1e3bf6e2d2cf2ac33b84bf75640c345ed42f26f6fdf80eb.json  query-976152926ec1c770cca08b096597e23fc503aa6ddcd6c0ec8486b84df5fce9c8.json  query-a5007cf1e1006f47818b462f1f6c03c97e926d77b65afc5df54775ba7264b742.json  query-a8f8ae98119f1df230f8e9a585572cd78ae701ae36df4d857aa53b729ae17596.json  query-bb98cc9cf40e7a0c4a3758ebcaffdc7d9077e52d17b212faa4867cd3149e9538.json  query-c3e35168bba4cdf9e441220d8de5a6a0b09ca79e0ffcb0338b148e043462d6b9.json  query-e7b60f8f2e1712959a32fae9fea0965956dee1d7121f20fb379b86747c1028a1.json  query-eb786ad244fe348c252035d9d8861c37d2d9a68aff4345397ad9476e013488aa.json
crates/user/migrations/: 20250816023503_create_users.up.sql
crates/user/src/: di.rs  lib.rs  main.rs  state.rs
pgbouncer/: init.sh  (+4 more)
(+333 files in other folders)
