[workspace]
members = [
  "crates/apigateway",
  "crates/shared",
  "crates/genproto",
  "crates/auth",
  "crates/email",
  "crates/order",
  "crates/product",
  "crates/role",
  "crates/user",
]
resolver = "3"

[workspace.dependencies]
shared = { path = "./crates/shared" }
genproto = { path = "./crates/genproto" }
anyhow = "1.0.98"
async-trait = "0.1.88"
rdkafka = { version = "0.38", features = ["tokio"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
serde = "1.0.219"
serde_json = "1.0.140"
validator = { version = "0.20", features = ["derive"] }
redis = { version = "0.32.3", features = ["tokio-comp", "aio"] }
thiserror = "2.0.12"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "registry",
  "std",
  "fmt",
  "json",
] }
tracing-appender = "0.2.3"
prometheus-client = "0.23.1"
prometheus-client-derive-encode = "0.4.2"
opentelemetry = "0.30.0"
opentelemetry-appender-tracing = "0.30.1"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.30.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
tokio = { version = "1.45.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "time",
  "fs",
] }
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
tower-http = { version = "0.6.2", features = ["limit", "trace", "fs"] }
tonic = "0.14.0"
lettre = { version = "0.11.17", features = [
  "smtp-transport",
  "tokio1-native-tls",
] }
askama = "0.14.0"
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
uuid = { version = "1.16.0", features = ["v4"] }
sysinfo = "0.36.1"
openssl = { version = "0.10.73", features = ["vendored"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
  "uuid",
  "json",
]}
rand = { version = "0.9.2", features = ["os_rng"] }
rand_core = "0.9.3"


