[package]
name = "email"
version = "0.1.0"
edition = "2024"

[dependencies]
shared.workspace = true
async-trait.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
dotenv.workspace = true
serde.workspace = true
anyhow.workspace = true
serde_json.workspace = true
rdkafka.workspace = true
tracing.workspace = true
lettre.workspace = true