[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
genproto.workspace = true
rand.workspace = true
anyhow.workspace = true
async-trait.workspace = true
askama.workspace = true
rdkafka.workspace = true
lettre.workspace = true
bcrypt.workspace = true
chrono.workspace = true
dotenv.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
validator.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
prometheus-client.workspace = true
prometheus-client-derive-encode.workspace = true
opentelemetry.workspace = true
opentelemetry-appender-tracing.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-stdout.workspace = true
opentelemetry-otlp.workspace = true
tonic.workspace = true
axum.workspace = true
axum-extra.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true
sysinfo.workspace = true
tokio.workspace = true
