[package]
name = "user"
version = "0.1.0"
edition = "2024"

[dependencies]
shared.workspace = true
axum.workspace = true
async-trait.workspace = true
dotenv.workspace = true
sqlx.workspace = true
validator.workspace = true
utoipa.workspace = true
genproto.workspace = true
chrono.workspace = true
anyhow.workspace = true
tonic.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
opentelemetry-appender-tracing.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-stdout.workspace = true
opentelemetry-otlp.workspace = true
prometheus-client.workspace = true
prometheus-client-derive-encode.workspace = true

[features]
vendored-openssl = []

[target.'cfg(target_env = "musl")'.dependencies]
openssl.workspace = true